@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\HandSkeleton.cs" />
      <Compile Include="Assets\Scripts\KeyModifier.cs" />
      <Compile Include="Assets\Scripts\MeshBuilder.cs" />
+     <Compile Include="Assets\Scripts\MIDIPiano.cs" />
      <Compile Include="Assets\Scripts\MIDIPlayer.cs" />
      <Compile Include="Assets\Scripts\PianoController.cs" />
      <Compile Include="Assets\Scripts\Sanford\Collections\Deque.cs" />
