@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: 4b91e351344a17143a217f566de85393
+timeCreated: 1503421050
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
