@@ -6,6 +6,8 @@ TODO:
 
 2017.8.22	K.L.	<k.l.lambda@gmail.com>
 
+	+	MIDIPiano: created.
+
 	+	PianoController: created.
 
 	+	MIDIPlayer: added MIDI sequence.
